Include link to csv

--- a/cscn19.tex
+++ b/cscn19.tex
@@ -169,7 +169,7 @@ granadaCells[1,]$lat; granadaCells[1,]$lon
 
 
 \begin{frame}{CSCN19 Granada AAUs CSV}
-    CSV with AAUs locations at \url{some-github-link}
+    CSV with AAUs locations at \url{https://github.com/MartinPJorge/cscn19/granada-cells.csv}
     \begin{itemize}
         \item 12 AAUs/km\textsuperscript{2}
         \item 10m repulsion radius
