Add all authors

--- a/cscn19.tex
+++ b/cscn19.tex
@@ -40,7 +40,7 @@
 
 \title{5GEN: A tool to generate 5G infrastructure graphs}
 \date{30\textsuperscript{th} October, 2019}
-\author{Jorge Martín Pérez}
+\author{Jorge Martín Pérez\\jmartinp@it.uc3m.es\\\vspace{1em}Luca Cominardi, Carlos J. Bernardos, Alain Mourad, }
 
 \usetheme{uc3m}
 
@@ -180,7 +180,7 @@ granadaCells[1,]$lat; granadaCells[1,]$lon
     \end{itemize}
 
     \begin{figure}
-        \includegraphics[width=0.6\textwidth]{img/granda-map-csv-aaus.pdf}
+        \includegraphics[width=0.45\textwidth]{img/granda-map-csv-aaus.pdf}
         \caption{AAUs generated with a Matérn II PPP \cite{repulsion}}
     \end{figure}
 \end{frame}
@@ -537,6 +537,15 @@ graph <- attachFogNodes(..., numNodes = 100,
         \item open source: \url{https://github.com/MartinPJorge/mec-generator/tree/5g-infra-gen}; and
         \item Given the AAUs it creates the whole infrastructure.
     \end{itemize}
+\end{frame}
+
+\begin{frame}{Questions}
+    \begin{center}
+        jmartinp@it.uc3m.es
+
+        \vfill
+        \url{https://github.com/MartinPJorge/mec-generator/tree/5g-infra-gen}
+    \end{center}
 \end{frame}
 
 
