Fix link errors

--- a/cscn19.tex
+++ b/cscn19.tex
@@ -169,7 +169,9 @@ granadaCells[1,]$lat; granadaCells[1,]$lon
 
 
 \begin{frame}{CSCN19 Granada AAUs CSV}
-    CSV with AAUs locations at \url{https://github.com/MartinPJorge/cscn19/granada-cells.csv}
+    CSV with AAUs locations at
+
+    \url{https://github.com/MartinPJorge/cscn19/blob/master/granada-cells.csv}
     \begin{itemize}
         \item 12 AAUs/km\textsuperscript{2}
         \item 10m repulsion radius
@@ -544,7 +546,14 @@ graph <- attachFogNodes(..., numNodes = 100,
         jmartinp@it.uc3m.es
 
         \vfill
+        \textbf{Repository}
+
         \url{https://github.com/MartinPJorge/mec-generator/tree/5g-infra-gen}
+
+        \vfill
+        \textbf{Slides}
+
+        \url{https://github.com/MartinPJorge/cscn19}
     \end{center}
 \end{frame}
 
